--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgb(243, 9, 9);
+    background-color: rgb(0, 6, 59);
     padding-block: 15px;
     border-block-end: 1px solid var(--black_10);
     z-index: 4;
@@ -314,7 +314,7 @@
   }
   
   .logo {
-    color: var(--black);
+    color: var(--white);
     font-family: var(--ff-poppins);
     font-size: 3.2rem;
     line-height: 0.9;
@@ -361,7 +361,7 @@
   .navbar-list { margin-block: 25px; }
   
   .navbar-link {
-    color: var(--black);
+    color: var(--white);
     font-family: var(--ff-poppins);
     font-weight: var(--fw-500);
   }
@@ -848,7 +848,7 @@
      */
   
     .header {
-      background-color: red;
+      background-color: rgb(8, 40, 146);
       border-block-end: none;
       padding-block: 25px;
       transition: var(--transition);
